--- a/index.html
+++ b/index.html
@@ -5,10 +5,276 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Influencer</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/f604b98926.js" crossorigin="anonymous"></script>
+    <!-- css -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./images/icon.png">
+    <title>Influencer Product</title>
 </head>
 
 <body>
+    <!-- header design -->
+    <header class="container">
+        <section class="navbar">
+            <div class="nav-left">
+                <h1>Influencer products</h1>
+            </div>
+            <div class="nav-right">
+
+                <ul class="nav-link">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">products</a></li>
+                    <li><a href="">Sign Up</a></li>
+                    <li><a href="">Log In</a></li>
+                </ul>
+                <ul>
+                    <li><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+                </ul>
+            </div>
+        </section>
+    </header>
+    <main class="container">
+        <section class="top">
+            <div class="top-left">
+                <h1>Start Your Journey As An Infleuncer</h1>
+                <p>Now a days, Influencer is a great way to promote your business in a great way! Its time to use this
+                    strategy to boost your business sales.</p>
+                <a href="">Book Now <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="top-right"><img src="./images/main-camera.png" alt=""></div>
+        </section>
+
+        <!-- Company Advertisement -->
+        <hr>
+        <section class="company-logo">
+            <div class="icon-logo">
+
+                <div class="icon"><img src="./logos/Alibaba.svg" alt=""></div>
+                <div class="icon"><img src="./logos/Amazon.svg" alt=""></div>
+                <div class="icon"><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+                <div class="icon"><img src="./logos/Ebay.svg" alt=""></div>
+                <div class="icon"><img src="./logos/Rakuten.svg" alt=""></div>
+                <div class="icon"><img src="./logos/Target.svg" alt=""></div>
+
+            </div>
+        </section>
+        <hr>
+        <!-- menu column -->
+        <section class="card-text">
+            <h1>Popular Collection</h1>
+        </section>
+        <section class="cards">
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/tripod.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Tripod</h2>
+                        <h3>$40</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/drone.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Mini Drone</h2>
+                        <h3>$100</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/airpod.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Airpod</h2>
+                        <h3>$45</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/camera.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Camera</h2>
+                        <h3>$120</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"><span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/lights.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Lighting Packs</h2>
+                        <h3>$149</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/action.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Go Pro Camera</h2>
+                        <h3 class="doller">$50</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! .</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/single-light.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Camera Light</h2>
+                        <h3>$25</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/mic.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Microphone</h2>
+                        <h3>$20</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./images/setup.png" alt="">
+                    </div>
+                    <div class="card-details">
+                        <h2>Desk Setup</h2>
+                        <h3>$80</h3>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"> <span>4.5</span></i>
+                        <p>Worldwide shifting available. <br> Buyers protection possible! </p>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+        <!-- see more link -->
+        <div class="see-more">
+            <a href="">See More <i class="fas fa-arrow-right"></i></a>
+        </div>
+
+
+
+
+    </main>
+    <!-- Newsletter -->
+    <footer>
+        <section class="container">
+            <div class="contact-form">
+                <div class="form-img">
+                    <img src="./images/gear.png" alt="">
+                </div>
+                <div class="form-text">
+                    <form action="" class="form">
+                        <h3>Subscribe to Our Newsletter</h3>
+                        <p>Subsribe to our Newsletter to get all exclusive offers and update to your e-mail.</p>
+                        <input type="email" placeholder="name@mail.com" required verified>
+                        <button class="button" type="submit">Subscribe Now!</button>
+                    </form>
+                </div>
+            </div>
+
+        </section>
+        <!-- footer last  -->
+        <section class="footer">
+            <div class="footer-right">
+                <h3>Influencer</h3>
+                <p>copyright © 2022 influencer product</p>
+                <p>All right reserved</p>
+            </div>
+            <div class="social-icon">
+                <div class="icon">
+                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                </div>
+                <div class="icon">
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                </div>
+                <div class="icon">
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="icon">
+                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <div class="icon">
+                    <a href=""><i class="far fa-envelope fab"></i></a>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
